fixed issue with the bredcrumb where it was not aligning and the font was wrong

--- a/css/output.css
+++ b/css/output.css
@@ -292,6 +292,9 @@
   .ml-\[41px\] {
     margin-left: 41px;
   }
+  .ml-\[68px\] {
+    margin-left: 68px;
+  }
   .contents {
     display: contents;
   }
@@ -319,6 +322,9 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-25 {
+    height: calc(var(--spacing) * 25);
+  }
   .h-40 {
     height: calc(var(--spacing) * 40);
   }
@@ -330,6 +336,9 @@
   }
   .h-\[1px\] {
     height: 1px;
+  }
+  .h-\[25px\] {
+    height: 25px;
   }
   .h-\[61px\] {
     height: 61px;
@@ -357,6 +366,12 @@
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
+  }
+  .w-25 {
+    width: calc(var(--spacing) * 25);
+  }
+  .w-\[24px\] {
+    width: 24px;
   }
   .w-auto {
     width: auto;
@@ -552,6 +567,9 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -560,6 +578,9 @@
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-8 {
+    padding-inline: calc(var(--spacing) * 8);
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
@@ -639,6 +660,9 @@
   }
   .text-\[28px\] {
     font-size: 28px;
+  }
+  .text-\[32px\] {
+    font-size: 32px;
   }
   .leading-\[20px\] {
     --tw-leading: 20px;
@@ -766,6 +790,11 @@
       }
     }
   }
+  .sm\:ml-\[41px\] {
+    @media (width >= 40rem) {
+      margin-left: 41px;
+    }
+  }
   .sm\:h-52 {
     @media (width >= 40rem) {
       height: calc(var(--spacing) * 52);
@@ -784,6 +813,16 @@
   .sm\:pl-\[25px\] {
     @media (width >= 40rem) {
       padding-left: 25px;
+    }
+  }
+  .sm\:pl-\[41px\] {
+    @media (width >= 40rem) {
+      padding-left: 41px;
+    }
+  }
+  .sm\:pl-\[68px\] {
+    @media (width >= 40rem) {
+      padding-left: 68px;
     }
   }
   .sm\:text-left {
